--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
   "dependencies": {
     "express": "3.4.8",
     "jade": "*",
-    "less-middleware": "*",
-    "jquery": "~2.1.0"
+    "less-middleware": "*"
   }
 }
